# flexi_syslog

./: .clippy.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: basic.rs  max_bytes.rs
scripts/: clippy.sh
src/: lib.rs  libc_writer.rs  log_option.rs  log_writer.rs  writer.rs
tests/: libc_writer.rs  should_filter_log_entries.rs  should_handle_socket_shutdown.rs  test.rs  test_default_writer.rs  test_max_bytes.rs
