[package]
name = "flexi_syslog"
version = "0.5.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bheylin/flexi_syslog"
documentation = "https://docs.rs/flexi_syslog"
homepage = "https://crates.io/crates/flexi_syslog"
description = "A syslog writer for flexi_logger"
keywords = ["logger", "logging", "syslog", "flexi-logger"]
categories = ["development-tools::debugging"]

[dependencies]
arrayvec = "0.7.2"
flexi_logger = { version = "0.25", default-features = false }
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12.1"
syslog_fmt = { path = "../syslog-suite/syslog-fmt", package = "syslog_fmt" }
syslog_net = { path = "../syslog-suite/syslog-net", package = "syslog_net" }

[dev-dependencies]
rand = "0.8.5"

[[bin]]
name = "periodic_logger"
path = "src/bin/periodic_logger.rs"

[[test]]
name = "should_handle_socket_shutdown"
harness = false

[[test]]
name = "should_filter_log_entries"
harness = false
