[package]
name = "flexi_syslog"
version = "0.5.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bheylin/flexi_syslog"
documentation = "https://docs.rs/flexi_syslog"
homepage = "https://crates.io/crates/flexi_syslog"
description = "A syslog writer for flexi_logger"
keywords = ["logger", "logging", "syslog", "flexi-logger"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = "0.4.34"
flexi_logger = { version = "0.27.4", default-features = false }
log = { version = "0.4", features = ["std"] }
syslog = { version = "6.1" }

[dev-dependencies]
anyhow = { version = "1.0" }
